# prova02-api-rest

./: README.md  pyproject.toml
src/: server.py
src/config/: database.py
src/models/: reservas_model.py  voos_model.py
src/routes/: reservas_routes.py  voos_routes.py
