[tool.poetry]
name = "prova02-api-rest"
version = "0.1.0"
description = ""
authors = ["Vinicius Lourenzoni <viniciuslourenzoni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlmodel = "^0.0.12"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
